# marshmallow_old

./: FQW.docx  LW_marshmallow.md  Plan FQW.txt  README.md  USART  Webcam.py  gamepadTwist.py  keyboardTwist.py  sshkeyboardTwist.py  text  ~$FQW.docx  ВКР.docx  Защита.pptx
Delta-2A/Delta2A(C#?)/: SDK.sln
Delta-2A/Delta2A(C#?)/SDK/: Check.cs  Lidar.cs  Program.cs  SDK.csproj
Delta-2A/Delta_2A_mcu_demo(STM32f103C8)/Keil/: JLinkLog.txt
STM32/dump_memory/: 23.05.22_12:34
STM32/marshmallow_script/.metadata/: version.ini
STM32/marshmallow_script/Blink_New001/: .cproject  .mxproject  .project  Blink_New001 Debug.launch  Blink_New001.ioc
STM32/marshmallow_script/Bluetooth_New001/: .cproject  .mxproject  .project  Bluetooth_New001 Debug.launch  Bluetooth_New001.ioc
STM32/marshmallow_script/Button_New001/: .cproject  .mxproject  .project  Button_New001 Debug.launch  Button_New001.ioc
STM32/marshmallow_script/Driver_USB_v1.0/: .cproject  .mxproject  .project  Driver_USB_v1.0 Debug.launch  Driver_USB_v1.0.ioc
STM32/marshmallow_script/HC-05_v1.0/: .cproject  .mxproject  .project  HC-05_v1.0 Debug.launch  HC-05_v1.0.ioc
STM32/marshmallow_script/Marsh_v1.0/: .cproject  .mxproject  .project  Marsh_v1.0 Debug.launch  Marsh_v1.0.ioc
STM32/marshmallow_script/PWM_New001/: .cproject  .mxproject  .project  PWM_New001 Debug.launch  PWM_New001.ioc
mars_ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mars_ros2/log/: latest_build
mars_ros2/src/install/delta_lidar/share/delta_lidar/: package.ps1  package.sh  package.xml  package.zsh
(+239 files in other folders)
