<?xml version="1.0"?>
<package format="2">
  <name>delta_lidar</name>
  <version>1.0.0</version>
  <description>
    The delta_lidar ros package, support delta_lidar
  </description>
  <maintainer email="robot@3irobotics.com">3i Robotics ROS Maintainer</maintainer>
    <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>